# av_imitation

./: README.md  package.xml  setup.cfg  setup.py
av_imitation/scripts/: export_onnx.py  inference.py  process_bag.py
av_imitation/src/: dataloader.py  image_processor.py  main.py  play.py  vesc_utils.py
av_imitation/src/models/: __init__.py  cnn.py  mlp.py  transformer.py
av_imitation/webapp/: app.py
av_imitation/webapp/static/js/: main.js
av_imitation/webapp/templates/: index.html
